<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/shopItemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/shopItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/shopItemTitle"
            android:layout_below="@id/shopItemImage" />

        <RatingBar
            android:id="@+id/shopRatingBar"
            style="@android:style/Widget.DeviceDefault.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultMargin"
            android:layout_centerHorizontal="true"
            android:isIndicator="true"
            android:numStars="5"
            android:layout_below="@id/shopItemTitle"
            />

        <TextView
            android:id="@+id/shotItemInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shopRatingBar"
            android:padding="8dp"
            android:text="@string/shopItemInfo" />

        <TextView
            android:id="@+id/shopItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/shopItemPrice"
            android:textColor="@color/green"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/shotItemInfo"/>


        <Button
            android:id="@+id/shopItemAddCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kosárba"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/shopItemPrice"/>



    </RelativeLayout>


</androidx.cardview.widget.CardView>